WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258401
LocalSampleBufferDisplayLayer gets errored in SVC when going in the background
https://bugs.webkit.org/show_bug.cgi?id=258401
Summary
LocalSampleBufferDisplayLayer gets errored in SVC when going in the background
youenn fablet
Reported
2023-06-22 06:36:21 PDT
Recovery does not seem to work, which means that local rendering gets broken very easily.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-22 06:36:39 PDT
<
rdar://problem/111157247
>
youenn fablet
Comment 2
2023-06-22 08:49:56 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15194
EWS
Comment 3
2023-06-23 00:34:39 PDT
Committed
265451@main
(6f0659d6fa39): <
https://commits.webkit.org/265451@main
> Reviewed commits have been landed. Closing PR #15194 and removing active labels.
youenn fablet
Comment 4
2023-07-21 01:23:56 PDT
***
Bug 259337
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug