LocalSampleBufferDisplayLayer gets errored in SVC when going in the background https://bugs.webkit.org/show_bug.cgi?id=258401 rdar://111157247

Reviewed by Eric Carlson.

In case of LocalSampleBufferDisplayLayer getting errored, we no longer are resetting the bounds of the newly created LocalSampleBufferDisplayLayer.
This was removed as part of https://bugs.webkit.org/show_bug.cgi?id=256695 patch as it was creating visible artifacts/flashes.
We are now resetting the bounds of a newly created LocalSampleBufferDisplayLayer in case it is recreated.
We do by storing the bounds of the LocalSampleBufferDisplayLayer.

Manually tested.

* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.h:
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaStreamAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::layersAreInitialized):
(WebCore::MediaPlayerPrivateMediaStreamAVFObjC::setVideoInlineSizeFenced):

Canonical link: https://commits.webkit.org/265451@main